<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="139dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="146dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monkey" />

    <TextView
        android:id="@+id/title"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:gravity="center"
        android:text="@string/titles"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <Button
        android:id="@+id/logout"
        android:layout_width="76dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:textSize="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <LinearLayout

        android:layout_width="340dp"
        android:layout_height="162dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:id="@+id/animal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="109dp"
                android:layout_height="96dp"
                android:src="@drawable/bear_grizzly_christmas_wild_animal_icon_159326" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/animals"
                android:textColor="@color/background"
                android:textSize="18dp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_subrayada" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/emotion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:src="@drawable/awkward_emoji_smile_happy_emo_emoticon_icon_192058" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/emotions"
                android:textColor="@color/background"
                android:textSize="18dp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_subrayada" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="162dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <LinearLayout
            android:id="@+id/food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="101dp"
                android:layout_height="92dp"
                android:src="@drawable/tradition_autumn_holiday_fall_cake_pumpkin_icon_227936" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/food"
                android:textColor="@color/background"
                android:textSize="18dp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_subrayada" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/drink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="107dp"
                android:layout_height="96dp"
                android:src="@drawable/tradition_autumn_holiday_fall_cidar_icon_227943" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/drink"
                android:textColor="@color/background"
                android:textSize="18dp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_subrayada" />


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/start"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/button"
        android:text="@string/start"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>