<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="163dp"
        android:layout_height="167dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monkey" />

    <TextView
        android:id="@+id/title"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:gravity="center"
        android:text="@string/titles"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="355dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button"
        android:layerType="none"
        android:text="@string/registration"
        android:textAllCaps="false"
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="355dp"
        android:layout_height="69dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />


</androidx.constraintlayout.widget.ConstraintLayout>