<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/monkey"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/logo"
        android:layout_width="273dp"
        android:layout_height="52dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:gravity="center"
        app:fontFamily="@font/montserrat_subrayada"
        android:text="@string/titles"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_below="@+id/title"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/montserrat_subrayada"
        android:textStyle=""
        />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_below="@+id/username_input"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/montserrat_subrayada"
        />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="25dp"
        android:inputType="number"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:layout_below="@+id/phone_input"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/montserrat_subrayada"
        android:textStyle=""
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="355dp"
        android:layout_height="69dp"
        android:layout_below="@+id/password_input"
        android:text="@string/register"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:layout_marginLeft="25dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        />

</RelativeLayout>