<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".Sign_in">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="183dp"
        android:layout_height="188dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monkey"
        tools:ignore="ContentDescription,HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="112dp"
        android:gravity="center"
        android:text="@string/titles"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="320dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/phone_input"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="59dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:ignore="DuplicateClickableBoundsCheck,LabelFor,MissingConstraints,SpeakableTextPresentCheck,TextFields" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="288dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle=""
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="57dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <com.rey.material.widget.CheckBox
        android:id="@+id/login_checkbox"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="61dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="54dp"
        android:text="@string/zabili"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle=""
        app:fontFamily="@font/montserrat_subrayada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginTop="296dp"
        android:background="@drawable/button"
        android:text="@string/enter"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />




</androidx.constraintlayout.widget.ConstraintLayout>